# mcp

./: .env.example  .gitignore  DESIGN.md  pyproject.toml
src/mcpserver/: config.py  server.py
src/mcpserver/tools/: my_api.py  sales_order.py  weather.py
