[project]
name = "mcpserver"
version = "0.1.0"
description = "Personal MCP server (weather + custom APIs) over streamable HTTP"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcpserver = "mcpserver.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpserver"]
